--- a/src/ui/patient/PatientRegisterFrame.form
+++ b/src/ui/patient/PatientRegisterFrame.form
@@ -421,7 +421,7 @@
     <Component class="javax.swing.JButton" name="btnClear">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/reset.png"/>
+          <Image iconType="3" name="/assets/RepeatHS.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Clear"/>
       </Properties>
@@ -429,7 +429,7 @@
     <Component class="javax.swing.JButton" name="btnSave">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/modify.png"/>
+          <Image iconType="3" name="/assets/about.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Save"/>
       </Properties>
